api progress